# ZZZ-YOLOv6

./: pyproject.toml  tutorial.ipynb
configs/: yolov6n6.py  yolov6n6_finetune.py  yolov6n_finetune.py  yolov6s6.py
configs/base/: yolov6l_base_finetune.py  yolov6n_base.py  yolov6n_base_finetune.py
configs/experiment/: yolov6n_with_eval_params.py  yolov6s_csp_scaled.py  yolov6t_csp_scaled.py
configs/mbla/: yolov6m_mbla.py  yolov6m_mbla_finetune.py  yolov6s_mbla.py  yolov6s_mbla_finetune.py  yolov6x_mbla.py  yolov6x_mbla_finetune.py
configs/qarepvgg/: yolov6n_qa.py
data/: dataset.yaml
tools/: infer.py
yolov6/core/: inferer.py
