[tool.poetry]
name = "ZZZ-YOLOv6"
version = "0.1.0"
description = ""
authors = ["Harry Huang <harryhuang2652@qq.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8"
torchvision = "^0.9"
numpy = "^1.24"
opencv-python = "^4.10"
pyyaml = "^5.4"
scipy = "^1.9"
tqdm = "^4.66"
addict = "^2.4"
tensorboard = "^2.14"
pycocotools = "^2.0"
onnx = "^1.16"
onnx-simplifier = "^0.3"
thop = "^0.1"
# pytorch_quantization = "^2.1"

[[tool.poetry.source]]
name = "PyPI-Tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
